# sr2-relay

./: .gitignore  CLAUDE.md  pyproject.toml
config/: .litellm-proxy.yaml  sr2-relay-config.yaml
configs/: relay.yaml
src/sr2_relay/: __init__.py  __main__.py  cli.py  config.py  main.py  sr2_handler.py
src/sr2_relay/adapters/: __init__.py
src/sr2_relay/api/: routes.py
src/sr2_relay/models/: __init__.py  sr2_relay_config.py
tests/: conftest.py  test_config.py  test_llm.py  test_models.py  test_server.py  test_session.py
tests/test_adapters/: test_anthropic.py  test_openai.py
